# aeolus

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  INSTALL-osx  README  README-macOS.md  install-macOS.sh
doc/: MIDI.md  Terminal_Interface.md  patchbay.xml
source/: .gitignore  Makefile  Makefile-osx  addsynth.cc  addsynth.h  alsa_audio.cc  alsa_audio.h  alsa_midi.cc  alsa_midi.h  asection.cc  asection.h  audio-portaudio.cc  audio-portaudio.h  audio.cc  audio.h  audio_backend.cc  audio_backend.h  audio_factory.cc  audio_factory.h  audiowin.cc  audiowin.h  callbacks.h  division.cc  division.h  editwin.cc  editwin.h  exp2ap.cc  fix-whitespace.sh  functionwin.cc  functionwin.h  global.h  iface.h  imidi-osx.cc  imidi.cc  imidi.h  instrwin.cc  instrwin.h  jack_audio.cc  jack_audio.h  lfqueue.cc  (+36 more)
tests/: test_audio_backend.cc  test_audio_processing.cc  test_main.cc  test_midi_integration.cc  test_midi_processor.cc
